--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -1,5 +1,24 @@
-.navbar-inner {
-	min-height: 60px;
+.header-anchor
+{
+	color:red;
 }
-
+.vertical-divider
+{
+	float:left;
+	position:relative;
+	height:60px;
+	line-height:60px;
+	min-width:1px;
+	border-left:1px solid #e3e6ea;
+	-webkit-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	-moz-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	font-weight:500
+	}
+	
+.navbar-anchor
+{
+	color:rgb(46,178,231) !important;
+	font-size:14px;
+}	
 
