--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -8,7 +8,6 @@
 	position:relative;
 	height:60px;
 	line-height:60px;
-	min-width:1px;
 	border-left:1px solid #e3e6ea;
 	-webkit-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
 	-moz-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
@@ -20,6 +19,13 @@
 {
 	color:rgb(46,178,231) !important;
 	font-size:14px;
+	padding: 15px !important;
+}	
+
+.navbar-anchor:hover
+{
+	background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.01);
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07) inset;
 }	
 
 .c-overlay {
@@ -27,5 +33,10 @@
 	position: absolute;
 	background-color: rgba(0,0,0,0.3);
 	left: 50%;
-	top: 20%;
+	top: 25%;
+}
+
+.c-home-container {
+	padding: 0px;
+	margin-top: 60px;
 }
