--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -2,18 +2,9 @@
 {
 	color:red;
 }
-.vertical-divider
-{
-	float:left;
-	position:relative;
-	height:60px;
-	line-height:60px;
-	border-left:1px solid #e3e6ea;
-	-webkit-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
-	-moz-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
-	box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
-	font-weight:500
-	}
+
+
+
 	
 .navbar-anchor
 {
@@ -39,4 +30,86 @@
 .c-home-container {
 	padding: 0px;
 	margin-top: 60px;
+}
+
+.productInfo
+{
+		padding-top:13px;
+		padding-bottom:12px;
+		font-size:12px;
+		display:block;
+		position:relative;
+		border-bottom:1px solid #f0f0f0;	
+}
+.boxes
+{
+	position:relative;	
+	overflow:hidden;
+}
+.promotionInfo
+{
+	bottom: 0px;
+	width:100%;
+	position:absolute;
+	background-color:rgba(0,0,0,0.5);			
+	color:#fff;			
+}
+
+.promotionInfo .wrapper
+{
+	padding:12px 15px 10px 13px;
+}
+
+.promotionInfo .wrapper .date
+{
+	float:right;
+}
+
+.promotionInfo .wrapper .title
+{	
+	float:left;
+	text-align:left;
+}
+
+.discount
+{
+		background-color:#c72a2a;
+		color:#fff;
+		padding:8px 38px 6px 38px;
+		font-size:14px;
+		font-weight:bold;
+		position:absolute;
+		top:13px;
+		left:-35px;
+		text-align:center;
+	
+}
+.rotate-45
+{
+ 
+		-moz-transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		-o-transform: rotate(-45deg);
+		-ms-transform: rotate(-45deg);
+		transform: rotate(-45deg);
+	
+}
+
+@media screen and (min-width:960px)
+{
+	
+.vertical-divider
+{
+	float:left;
+	position:relative;
+	height:60px;
+	line-height:60px;
+	min-width:1px;
+	border-left:1px solid #e3e6ea;
+	-webkit-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	-moz-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
+	font-weight:500
+}
+
 }
