--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -3,9 +3,6 @@
 	color:red;
 }
 
-
-
-	
 .navbar-anchor
 {
 	color:rgb(46,178,231) !important;
@@ -45,6 +42,7 @@
 {
 	position:relative;	
 	overflow:hidden;
+	margin-bottom: 10px;
 }
 .promotionInfo
 {
@@ -95,6 +93,11 @@
 	
 }
 
+.c-thumbnail {
+	margin-bottom: 10px;
+	
+}
+
 @media screen and (min-width:960px)
 {
 	
@@ -104,7 +107,6 @@
 	position:relative;
 	height:60px;
 	line-height:60px;
-	min-width:1px;
 	border-left:1px solid #e3e6ea;
 	-webkit-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
 	-moz-box-shadow:1px 0 0 rgba(255,255,255,0.1) inset;
@@ -112,4 +114,11 @@
 	font-weight:500
 }
 
+}
+
+@media screen and (max-width:480px)
+{
+.c-home-container {
+	display:none;
+}
 }
